[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroemperor"
version = "0.9.8.2"
authors = [{ name="ReddTea", email="redd@tea.com"}]
description = "Flexible python exoplanet fitter"
readme = "README.md"
license = {file="LICENSE"}
keywords = ["python", "MCMC", "sampler", "adaptive", "parallel tempering"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",]
dependencies = [
  "matplotlib>=3.5.1", # 3.8.4
  "pandas",
  "scikit-learn",  # 1.4.2
  "kepler.py",  # 0.0.7
  "reddemcee",  # 0.6.6
  "h5py",  # 3.11.0
  "reddcolors",  # 0.1.0
  "tabulate",  # 0.9.0
  "termcolor",  # 2.4.0
  "tqdm",  # 4.66.4
  "corner",  # 2.2.2
  "fast_kepler",  # 0.5.1
  ]
requires-python = ">=3.6"


[project.urls]
Homepage = "https://astroemperor.readthedocs.io/"
Documentation = "https://astroemperor.readthedocs.io/"
Repository = "https://github.com/ReddTea/astroemperor/"
Issues = "https://github.com/ReddTea/astroemperor/issues"


[tool.setuptools]
# Tells setuptools that your source code is under "src"
package-dir = {"" = "src"}
include-package-data = true

# This is optional, but if you don't specify which packages to include,
# setuptools will attempt to find them automatically:
# packages = ["astroemperor"]